# RedisAVRO

./: .dockerignore  .gitignore  AGENTS.md  BingSiteAuth.xml  Cargo.toml  Makefile  README.md  yandex_2f2ca78269c208e1.html
.github/workflows/: rust.yml
benchmarks/: nyc_taxi_benchmark.py  requirements.txt  test_benchmark.py
docker/: Dockerfile
src/: lib.rs
tests/: integration_test.rs
