[package]
name = "redis_avro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
redis-module = "2.0"
serde_avro_fast = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
crc32fast = "1.4"

[dev-dependencies]
redis = "0.24"
